[package]
name = "Connect3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
crossbeam = "0.8.0"
crossbeam-channel = "0.5.9"
crossbeam-utils = "0.8.17"
graphlib = "0.6.3"
rayon = "1.8.0"
serde = {version = "1.0.193", features = ["serde_derive"]}

[profile.release]
debug = 1

[rust]
debuginfo-level = 1

[build]
rustflags = ["-C", "symbol-mangling-version=v0"]
